--- a/Ferramentas/Ferramentas.csproj
+++ b/Ferramentas/Ferramentas.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaracterEspecial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessaoUsuario.cs" />
   </ItemGroup>
